--- a/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/style.css
@@ -438,3 +438,21 @@ body {
     width: 60%;
   }
 }
+
+@media screen and (max-width: 420px) {
+
+  .header {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .header__left-container {
+    width: 100%;
+  }
+
+  .header__actions {
+    margin: 10px;
+    width: 100%;
+    justify-content: space-between;
+  }
+}
