fixed svg fill and stroke color on change color  mode

--- a/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/style.css
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/8-css-variables/style.css
@@ -276,6 +276,7 @@ body {
   display: block;
   margin: 0 30px 0 0;
   stroke: var(--color-font);
+  fill: var(--color-background);
 }
 
 .needs__item__info {
