--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/style_variables.css
@@ -9,7 +9,7 @@ html {
   --font14: 14px;
   --font12: 12px;
   --font16: 16px;
-  --font-roboto: "Roboto", serif;
+  --font-roboto: "Roboto", sans-serif;
   --font-merriweather: "Merriweather", serif;
 }
 
