--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
@@ -15,13 +15,16 @@
   --color-text: #000;
   --color-background: #FFF;
   --color-red: #FD665E;
+  --color-btn-hover: #F8A09C;
 }
 
 [data-skin="dark"] {
   --color-background: #000;
   --color-text: #FFF;
   --color-red: #FD7E77;
+  --color-btn-hover: #F7B2AF;
 }
+
 
 body {
   display: flex;
@@ -29,6 +32,75 @@ body {
   justify-content: center;
   flex-direction: column;
   color: var(--color-text);
+}
+
+.preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-background);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  visibility: visible;
+}
+
+.loader__spin {
+  width: 360px;
+  height: 360px;
+  border: 20px solid var(--color-btn-hover);
+  border-top-color: var(--color-red);
+  border-radius: 50%;
+  animation: 2s spin infinite linear;
+}
+
+@keyframes spin {
+
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loader__logo {
+  position: absolute;
+  width: 340px;
+}
+
+.logo-size {
+  width: 300px;
+}
+
+.logo-size__pulse {
+  animation: 1.5s pulse infinite linear;
+  transform-origin: center;
+}
+
+@keyframes pulse {
+
+  0% {
+    transform: scale(.7);
+  }
+
+  50% {
+    transform: scale(.9);
+  }
+
+  100% {
+    transform: scale(.7);
+  }
+}
+
+.done {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .wrapper {
