--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/style.css
@@ -41,11 +41,11 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--color-background);
-  z-index: 2;
+  z-index: 5;
   display: flex;
   align-items: center;
   justify-content: center;
-  opacity: 1;
+  opacity: 3;
   visibility: visible;
 }
 
@@ -163,7 +163,7 @@ body {
 
 .header__menu-link, .control__sign-in {
   display: inline-block;
-  padding-left: 24px;
+  margin-left: 24px;
   padding-right: 24px;
   font-family: Roboto, sans-serif;
   font-weight: 400;
@@ -172,22 +172,23 @@ body {
   text-decoration: none;
 }
 
-.header__menu-link::after, .control__sign-in::after {
+.header__menu-link::after, .control__sign-in::after, .menu__link::after {
   display: block;
   content: "";
-  height: 2px;
-  width: 0%;
+  height: 1px;
+  width: 100%;
+  left: 0;
   background-color: var(--color-red);
-  transition: width .3s ease-in-out;
-  transform: translateX(-50%);
+  transition: .6s;
+  transform: scaleX(0);
 }
 
 .header__menu-link:hover, .control__sign-in:hover {
   color: var(--color-red);
 }
 
-.header__menu-link:hover::after, .control__sign-in:hover::after {
-  width: 100%;
+.header__menu-link:hover::after, .control__sign-in:hover::after, .menu__link:hover::after {
+  transform: scaleX(1);
 }
 
 .header__skin-btn {
@@ -439,6 +440,7 @@ body {
 }
 
 .menu__link {
+  display: inline-block;
   padding-left: 24px;
   padding-right: 24px;
   font-family: Roboto, sans-serif;
@@ -455,6 +457,39 @@ body {
 .footer__logo {
   margin-right: 166px;
   list-style: none;
+}
+
+.to-top {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 2;
+  width: 35px;
+  height: 35px;
+  font-family: Roboto, sans-serif;
+  font-weight: 900;
+  font-size: 15px;
+  text-align: center;
+  line-height: 30px;
+  background: var(--color-red);
+  color: var(--color-background);
+  cursor: pointer;
+  opacity: .7;
+  border-radius: var(--border-radius-button);
+  display: none;
+}
+
+.to-top:hover {
+  opacity: 1;
+  box-shadow: 0 0 10px var(--color-text);
+}
+
+.control__sign-in::after:hover {
+  background: var(--color-btn-hover);
+}
+
+.to-top--show {
+  display: block;
 }
 
 @media (max-width: 800px) {
